--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     </div>
                                 </div>
                                 <div class="card-item" data-year="March 2022">
-                                    <div class="card-item-title">Technical Assistant and QA Specilist at <span>WeHeartDigital</span></div>
+                                    <div class="card-item-title">Technical Assistant and QA Engineer at <span>WeHeartDigital</span></div>
                                     <div class="card-item-desc">
                                         Assist in solving Support issues, and investigating issues across multipul devices.
                                         Providing Quality Assurance to ensure that work by myself and others is of the highest quality.
