--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </body>
 </html>
 
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js?ver=1.4.2"></script>
+<script src="https://code.jquery.com/jquery-3.6.1.js"></script>
 <script type="text/javascript">
     $('#aboutmebtn').click(function () {
         $('.pop-up').addClass('open');
